--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,40 +1,48 @@
-version: '3.8'
+version: '3.9'
 
 services:
   db:
-    image: postgres:latest
     container_name: postgres_db
+    build: ./postgres
     environment:
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
-      POSTGRES_DB: mydb
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - postgres_data:/var/lib/postgresql/postgres_data
+      - db_data:/var/lib/postgresql/data
+    networks:
+      my_network:
+    healthcheck:
+      test: ["CMD-SHELL", "[ -f /var/lib/postgresql/data/.db_ready ] || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: always
     ports:
       - "5432:5432"
-    networks:
-      - app-network
   
-  web:
-    build: ../backend
-    command: python manage.py runserver 0.0.0.0:8000
+  backend:
+    build: ./../backend
+    environment:
+      DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
+      DJANGO_DEBUG: ${DJANGO_DEBUG}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    networks:
+      my_network:
     volumes:
-      - ../backend:/app
+      - backend_data:/app
+    depends_on:
+      db:
+        condition: service_healthy
+    restart: always
     ports:
       - "8000:8000"
-    depends_on:
-      - db
-    environment:
-      - POSTGRES_USER=myuser
-      - POSTGRES_PASSWORD=mypassword
-      - POSTGRES_DB=mydb
-      - POSTGRES_HOST=db
-    networks:
-      - app-network
 
 networks:
-  app-network:
-    driver: bridge
+  my_network:
 
-volumes: 
-  postgres_data:
+volumes:
+  db_data:
+  backend_data:
