--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,26 +1,23 @@
-# Use an official Python runtime as a parent image
 FROM python:3.13-slim
 
-# Set environment variables
+# set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-# Set the working directory inside the container
+# set the working directory
 WORKDIR /app
 
-# Copy the requirements.txt to the container
+# copy the requirements
 COPY requirements.txt /app/
 
-# Install dependencies
+# iinstall dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 RUN pip install psycopg2-binary
 
-# Copy the rest of the Django project code to the container
+# copy the rest of the Django project code
 COPY . /app/
 
-# Ensure all files are executable and correct permissions
 RUN chmod +x /app/manage.py
 
-# Run migrations and collect static files as part of the image build process
 CMD ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
