Created a new API doc for live chat to explain some of how the live chat will work. Introduced Daphne as our server to handle ASGI processes better than previously. Web chat now works

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,21 +7,19 @@ ENV PYTHONUNBUFFERED 1
 # set the working directory
 WORKDIR /app
 
-# copy the requirements
+# copy requirements
 COPY requirements.txt /app/
 
-# install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
-RUN pip install psycopg2-binary
 
-# copy the rest of the Django project code
+# copy the rest of the project code
 COPY . /app/
 
 RUN chmod +x /app/manage.py
 
-# copy the init_superuser.sh script into the container and make it executable
+# copy script and emake executable
 COPY ./db/init_superuser.sh /app/init_superuser.sh
 RUN chmod +x /app/init_superuser.sh
 
-# CMD to run the init_superuser.sh script first, then start the Django server
-CMD ["/bin/bash", "-c", "/app/init_superuser.sh && python manage.py runserver 0.0.0.0:8000"]
+# CMD to run the init_superuser.sh script and server
+CMD ["/bin/bash", "-c", "/app/init_superuser.sh && daphne -b 0.0.0.0 -p 8000 config.asgi:application"]
