--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,7 @@ asgiref==3.8.1
 Django==5.1.2
 djangorestframework==3.15.2
 sqlparse==0.5.1
-psycopg>=3.0
+psycopg2-binary>=2.9
 fastapi==0.68.2
 uvicorn==0.15.0
 passlib==1.7.4
