--- a/dev/ember-project/.eslintignore
+++ b/dev/ember-project/.eslintignore
@@ -1,14 +1,22 @@
 # unconventional js
 /blueprints/*/files/
+/vendor/
 
 # compiled output
-/declarations/
 /dist/
+/tmp/
+
+# dependencies
+/bower_components/
+/node_modules/
 
 # misc
 /coverage/
 !.*
 .*/
+.eslintcache
 
 # ember-try
 /.node_modules.ember-try/
+/bower.json.ember-try
+/package.json.ember-try
