--- a/backend/auth-service/Dockerfile
+++ b/backend/auth-service/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.13-slim
 
 # needed for PostgreSQL dev libraries
-RUN apt-get update && apt-get install -y libpq-dev gcc && \
+RUN apt-get update && apt-get install -y libpq-dev gcc openssl && \
 	apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # set environent variables
@@ -18,8 +18,12 @@ RUN pip install --no-cache-dir -r requirements.txt
 # copy the rest
 COPY . /app/
 
+# generate a self signed SSL certificate
+RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+	-keyout /app/server.key -out /app/server.crt -subj "/CN=localhost"
+
 # expose port
-EXPOSE 8000
+EXPOSE 443
 
 # run dev server
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["sh", "-c", "python manage.py migrate && python manage.py runserver_plus --cert-file /app/server.crt --key-file /app/server.key 0.0.0.0:443"]
