--- a/backend/chat-service/Dockerfile
+++ b/backend/chat-service/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.13-slim
 
 # install PostgreSQL development libraries
-RUN apt-get update && apt-get install -y libpq-dev gcc && \
+RUN apt-get update && apt-get install -y libpq-dev gcc openssl && \
 	apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # set environment variables
@@ -18,8 +18,13 @@ RUN pip install --no-cache-dir -r requirements.txt
 # copy the rest
 COPY . /app/
 
-# expose the port for WebSocket and Django
-EXPOSE 8000
+# generate a self signed SSL certificate
+RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+	-keyout /app/server.key -out /app/server.crt -subj "/CN=localhost"
 
-# cmd to run the Django Channels server (Daphne)
-CMD ["daphne", "-b", "0.0.0.0", "-p", "8000", "config.asgi:application"]
+# expose the port for WebSocket and Django
+EXPOSE 443
+
+# cmd to run the Django Channels server (uvicorn)
+CMD ["uvicorn", "config.asgi:application", "--host", "0.0.0.0", "--port", "443", "--ssl-keyfile", "/app/server.key", "--ssl-certfile", "/app/server.crt"]
+
