--- a/backend/game-stats-service/requirements.txt
+++ b/backend/game-stats-service/requirements.txt
@@ -5,3 +5,6 @@ djangorestframework==3.15.2
 psycopg2==2.9.10
 redis==5.1.1
 sqlparse==0.5.1
+django-extensions==3.2.3
+Werkzeug==2.3.7
+pyOpenSSL==23.2.0
