implemented polling pong api

--- a/nginx.conf
+++ b/nginx.conf
@@ -41,6 +41,15 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+		# Proxy requests to API 2
+        location /api3/ {
+            proxy_pass https://host.docker.internal:8000/;  # API 2 running on port 8443 (auth)
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # Handle SSL verification for upstream requests if needed
         proxy_ssl_verify off;  # Not recommended for production; use a valid certificate instead (see line 14)
     }
