health checks for pong game now implemented and it looks like the nginx container is working correctly. Needs to be checked

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -114,19 +114,13 @@ services:
       DJANGO_SUPERUSER_PASSWORD: ${DJANGO_SUPERUSER_PASSWORD}
     networks:
       my_network:
-    # healthcheck:
-    #     test: ["CMD-SHELL", "curl -k -f https://localhost:443/chat/health/ || exit 1"]
-    #     interval: 10s
-    #     timeout: 5s
-    #     retries: 5
+    healthcheck:
+        test: ["CMD-SHELL", "curl -k -f https://localhost:443/pong/health/ || exit 1"]
+        interval: 10s
+        timeout: 5s
+        retries: 5
     depends_on:
       db:
-        condition: service_healthy
-      auth-service:
-        condition: service_healthy
-      user-service:
-        condition: service_healthy
-      chat-service:
         condition: service_healthy
     restart: always
     ports:
@@ -152,26 +146,26 @@ services:
       - "6380:6380" # Redis TLS port
     restart: always
 
-  # nginx:
-  #   build: ./../frontend
-  #   container_name: nginx
-  #   depends_on:
-  #     db:
-  #       condition: service_healthy
-  #     auth-service:
-  #       condition: service_healthy
-  #     user-service:
-  #       condition: service_healthy
-  #     chat-service:
-  #       condition: service_healthy
-  #   #   pong-game:
-  #   #     condition: service_healthy
-  #   networks:
-  #     my_network:
-  #   ports:
-  #     - "80:80"
-  #     - "443:443"
-  #   restart: always
+  nginx:
+    build: ./../frontend
+    container_name: nginx
+    depends_on:
+      db:
+        condition: service_healthy
+      auth-service:
+        condition: service_healthy
+      user-service:
+        condition: service_healthy
+      chat-service:
+        condition: service_healthy
+      pong-game:
+        condition: service_healthy
+    networks:
+      my_network:
+    ports:
+      - "80:80"
+      - "443:443"
+    restart: always
 
 
 
