--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,11 +3,15 @@ FROM nginx:latest
 # Copy custom Nginx configuration
 COPY nginx.conf /etc/nginx/nginx.conf
 
-# Copy your API server's self-signed certificate to Nginx
-COPY server.crt /etc/ssl/certs/server.crt
+# generate a self signed SSL certificate
+RUN mkdir -p /etc/nginx/ssl && \
+	openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+		-keyout /etc/nginx/ssl/key.pem \
+		-out /etc/nginx/ssl/cert.pem \
+		-subj "/C=US/ST=State/L=City/O=Organization/OU=Department/CN=localhost"
 
 # Copy the built Ember app from Stage 1
-COPY dev/ember-project/dist /usr/share/nginx/html
+COPY dist /usr/share/nginx/html
 
 # Expose port 80
 EXPOSE 80 443
