--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -16,8 +16,8 @@ http {
 		listen						443 ssl;
 		server_name					localhost;
 
-		ssl_certificate				/etc/ssl/certs/server.crt;
-		ssl_certificate_key			/etc/ssl/certs/server.key;
+		ssl_certificate				/etc/nginx/ssl/cert.pem;
+		ssl_certificate_key			/etc/nginx/ssl/key.pem;
 		ssl_protocols				TLSv1.2 TLSv1.3;
 		ssl_prefer_server_ciphers	on;
 
@@ -27,7 +27,7 @@ http {
 			try_files	$uri $uri/ /index.html;
 		}
 		# proxy request for register API
-		location /ap1/ {
+		location /register/ {
 			proxy_pass https://host.docker.internal:9443/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
@@ -36,7 +36,7 @@ http {
 		}
 
 		# proxy requests to auth API
-		location /api2/ {
+		location /auth/ {
 			proxy_pass https://host.docker.internal:8443/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
@@ -45,8 +45,17 @@ http {
 		}
 
 		# proxy requests to chat API
-		location /api3/ {
+		location /chat/ {
 			proxy_pass https://host.docker.internal:10443/;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+		}
+
+		# proxy requests to game API
+		location /pong/ {
+			proxy_pass https://host.docker.internal:11443/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
