--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -43,7 +43,7 @@ http {
 
 		# Proxy requests to API 2
         location /api3/ {
-            proxy_pass https://host.docker.internal:8000/;  # API 2 running on port 8443 (auth)
+            proxy_pass https://host.docker.internal:11443/pong/game;  # API 2 running on port 8443 (auth)
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
