Separate database created for each django service now. Currently working and checked all the logs

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,19 +1,19 @@
 version: '3.9'
 
 services:
-  db:
-    container_name: postgres_db
-    build: ./../backend/postgres
+  auth-db:
+    container_name: auth-db
+    build: ./../backend/auth-service/postgres
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${AUTH_SERVICE_USER}
+      POSTGRES_PASSWORD: ${AUTH_SERVICE_PASSWORD}
+      POSTGRES_DB: ${AUTH_SERVICE_DB}
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - auth_data:/var/lib/postgresql/data
     networks:
       my_network:
     healthcheck:
-      test: ["CMD-SHELL", "[ -f /var/lib/postgresql/data/.db_ready ] || exit 1" ]
+      test: [ "CMD-SHELL", "[ -f /var/lib/postgresql/data/.db_ready ] || exit 1" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -21,27 +21,87 @@ services:
     ports:
       - "5432:5432"
 
+  user-db:
+    container_name: user-db
+    build: ./../backend/user-service/postgres
+    environment:
+      POSTGRES_USER: ${USER_SERVICE_USER}
+      POSTGRES_PASSWORD: ${USER_SERVICE_PASSWORD}
+      POSTGRES_DB: ${USER_SERVICE_DB}
+    volumes:
+      - user_data:/var/lib/postgresql/data
+    networks:
+      my_network:
+    healthcheck:
+      test: [ "CMD-SHELL", "[ -f /var/lib/postgresql/data/.db_ready ] || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: always
+    ports:
+      - "5433:5432"
+
+  chat-db:
+    container_name: chat-db
+    build: ./../backend/chat-service/postgres
+    environment:
+      POSTGRES_USER: ${CHAT_SERVICE_USER}
+      POSTGRES_PASSWORD: ${CHAT_SERVICE_PASSWORD}
+      POSTGRES_DB: ${CHAT_SERVICE_DB}
+    volumes:
+      - chat_data:/var/lib/postgresql/data
+    networks:
+      my_network:
+    healthcheck:
+      test: [ "CMD-SHELL", "[ -f /var/lib/postgresql/data/.db_ready ] || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: always
+    ports:
+      - "5434:5432"
+
+  pong-db:
+    container_name: pong-db
+    build: ./../backend/pong/postgres
+    environment:
+      POSTGRES_USER: ${PONG_SERVICE_USER}
+      POSTGRES_PASSWORD: ${PONG_SERVICE_PASSWORD}
+      POSTGRES_DB: ${PONG_SERVICE_DB}
+    volumes:
+      - pong_data:/var/lib/postgresql/data
+    networks:
+      my_network:
+    healthcheck:
+      test: [ "CMD-SHELL", "[ -f /var/lib/postgresql/data/.db_ready ] || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: always
+    ports:
+      - "5435:5432"
+
   auth-service:
     build: ./../backend/auth-service
     container_name: auth-service
     environment:
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
       DJANGO_DEBUG: ${DJANGO_DEBUG}
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      AUTH_SERVICE_DB: ${AUTH_SERVICE_DB}
+      AUTH_SERVICE_USER: ${AUTH_SERVICE_USER}
+      AUTH_SERVICE_PASSWORD: ${AUTH_SERVICE_PASSWORD}
       DJANGO_SUPERUSER_USERNAME: ${DJANGO_SUPERUSER_USERNAME}
       DJANGO_SUPERUSER_EMAIL: ${DJANGO_SUPERUSER_EMAIL}
       DJANGO_SUPERUSER_PASSWORD: ${DJANGO_SUPERUSER_PASSWORD}
     networks:
       my_network:
     healthcheck:
-      test: ["CMD-SHELL", "curl -k -f https://localhost:443/auth/health/ || exit 1"]
+      test: [ "CMD-SHELL", "curl -k -f https://localhost:443/auth/health/ || exit 1" ]
       interval: 10s
       timeout: 5s
       retries: 5
     depends_on:
-      db:
+      auth-db:
         condition: service_healthy
     restart: always
     ports:
@@ -53,23 +113,21 @@ services:
     environment:
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
       DJANGO_DEBUG: ${DJANGO_DEBUG}
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      USER_SERVICE_DB: ${USER_SERVICE_DB}
+      USER_SERVICE_USER: ${USER_SERVICE_USER}
+      USER_SERVICE_PASSWORD: ${USER_SERVICE_PASSWORD}
       DJANGO_SUPERUSER_USERNAME: ${DJANGO_SUPERUSER_USERNAME}
       DJANGO_SUPERUSER_EMAIL: ${DJANGO_SUPERUSER_EMAIL}
       DJANGO_SUPERUSER_PASSWORD: ${DJANGO_SUPERUSER_PASSWORD}
     networks:
       my_network:
     healthcheck:
-      test: ["CMD-SHELL", "curl -k -f https://localhost:443/users/health/ || exit 1"]
+      test: [ "CMD-SHELL", "curl -k -f https://localhost:443/users/health/ || exit 1" ]
       interval: 10s
       timeout: 5s
       retries: 5
     depends_on:
-      db:
-        condition: service_healthy
-      auth-service:
+      user-db:
         condition: service_healthy
     restart: always
     ports:
@@ -81,9 +139,9 @@ services:
     environment:
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
       DJANGO_DEBUG: ${DJANGO_DEBUG}
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      CHAT_SERVICE_DB: ${CHAT_SERVICE_DB}
+      CHAT_SERVICE_USER: ${CHAT_SERVICE_USER}
+      CHAT_SERVICE_PASSWORD: ${CHAT_SERVICE_PASSWORD}
       DJANGO_SUPERUSER_USERNAME: ${DJANGO_SUPERUSER_USERNAME}
       DJANGO_SUPERUSER_EMAIL: ${DJANGO_SUPERUSER_EMAIL}
       DJANGO_SUPERUSER_PASSWORD: ${DJANGO_SUPERUSER_PASSWORD}
@@ -91,16 +149,12 @@ services:
     networks:
       my_network:
     healthcheck:
-        test: ["CMD-SHELL", "curl -k -f https://localhost:443/chat/health/ || exit 1"]
-        interval: 10s
-        timeout: 5s
-        retries: 5
+      test: [ "CMD-SHELL", "curl -k -f https://localhost:443/chat/health/ || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     depends_on:
-      db:
-        condition: service_healthy
-      auth-service:
-        condition: service_healthy
-      user-service:
+      chat-db:
         condition: service_healthy
     restart: always
     ports:
@@ -112,27 +166,21 @@ services:
     environment:
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
       DJANGO_DEBUG: ${DJANGO_DEBUG}
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      PONG_SERVICE_DB: ${PONG_SERVICE_DB}
+      PONG_SERVICE_USER: ${PONG_SERVICE_USER}
+      PONG_SERVICE_PASSWORD: ${PONG_SERVICE_PASSWORD}
       DJANGO_SUPERUSER_USERNAME: ${DJANGO_SUPERUSER_USERNAME}
       DJANGO_SUPERUSER_EMAIL: ${DJANGO_SUPERUSER_EMAIL}
       DJANGO_SUPERUSER_PASSWORD: ${DJANGO_SUPERUSER_PASSWORD}
     networks:
       my_network:
     healthcheck:
-        test: ["CMD-SHELL", "curl -k -f https://localhost:443/pong/health/ || exit 1"]
-        interval: 10s
-        timeout: 5s
-        retries: 5
+      test: [ "CMD-SHELL", "curl -k -f https://localhost:443/pong/health/ || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     depends_on:
-      db:
-        condition: service_healthy
-      auth-service:
-        condition: service_healthy
-      user-service:
-        condition: service_healthy
-      chat-service:
+      pong-db:
         condition: service_healthy
     restart: always
     ports:
@@ -162,8 +210,6 @@ services:
     build: ./../frontend
     container_name: nginx
     depends_on:
-      db:
-        condition: service_healthy
       auth-service:
         condition: service_healthy
       user-service:
@@ -182,6 +228,10 @@ services:
 networks:
   my_network:
 
+
 volumes:
-  db_data:
+  user_data:
+  auth_data:
+  chat_data:
+  pong_data:
   redis_data:
