--- a/backend/chat-service/Dockerfile
+++ b/backend/chat-service/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:3.13-slim
 
 # install PostgreSQL development libraries
-RUN apt-get update && apt-get install -y libpq-dev gcc openssl curl && \
-	apt-get clean && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y libpq-dev gcc openssl curl iputils-ping postgresql-client && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
