--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,13 +13,33 @@ services:
     networks:
       my_network:
     healthcheck:
-      test: ["CMD-SHELL", "[ -f /var/lib/postgresql/data/.db_ready ] || exit 1" ]
+      test: [ "CMD-SHELL", "[ -f /var/lib/postgresql/data/.db_ready ] || exit 1" ]
       interval: 10s
       timeout: 5s
       retries: 5
     restart: always
     ports:
       - "5432:5432"
+
+  user-db:
+    container_name: user_db
+    build: ./../backend/user-service/postgres
+    environment:
+      POSTGRES_USER: ${USER_SERVICE_USER}
+      POSTGRES_PASSWORD: ${USER_SERVICE_PASSWORD}
+      POSTGRES_DB: ${USER_SERVICE_DB}
+    volumes:
+      - user_data:/var/lib/postgresql/data
+    networks:
+      my_network:
+    healthcheck:
+      test: [ "CMD-SHELL", "[ -f /var/lib/postgresql/data/.db_ready ] || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: always
+    ports:
+      - "5433:5432"
 
   auth-service:
     build: ./../backend/auth-service
@@ -36,7 +56,7 @@ services:
     networks:
       my_network:
     healthcheck:
-      test: ["CMD-SHELL", "curl -k -f https://localhost:443/auth/health/ || exit 1"]
+      test: [ "CMD-SHELL", "curl -k -f https://localhost:443/auth/health/ || exit 1" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -53,21 +73,21 @@ services:
     environment:
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
       DJANGO_DEBUG: ${DJANGO_DEBUG}
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      USER_SERVICE_DB: ${USER_SERVICE_DB}
+      USER_SERVICE_USER: ${USER_SERVICE_USER}
+      USER_SERVICE_PASSWORD: ${USER_SERVICE_PASSWORD}
       DJANGO_SUPERUSER_USERNAME: ${DJANGO_SUPERUSER_USERNAME}
       DJANGO_SUPERUSER_EMAIL: ${DJANGO_SUPERUSER_EMAIL}
       DJANGO_SUPERUSER_PASSWORD: ${DJANGO_SUPERUSER_PASSWORD}
     networks:
       my_network:
     healthcheck:
-      test: ["CMD-SHELL", "curl -k -f https://localhost:443/users/health/ || exit 1"]
+      test: [ "CMD-SHELL", "curl -k -f https://localhost:443/users/health/ || exit 1" ]
       interval: 10s
       timeout: 5s
       retries: 5
     depends_on:
-      db:
+      user-db:
         condition: service_healthy
     restart: always
     ports:
@@ -89,12 +109,14 @@ services:
     networks:
       my_network:
     healthcheck:
-        test: ["CMD-SHELL", "curl -k -f https://localhost:443/chat/health/ || exit 1"]
-        interval: 10s
-        timeout: 5s
-        retries: 5
+      test: [ "CMD-SHELL", "curl -k -f https://localhost:443/chat/health/ || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     depends_on:
       db:
+        condition: service_healthy
+      auth-service:
         condition: service_healthy
     restart: always
     ports:
@@ -115,12 +137,16 @@ services:
     networks:
       my_network:
     healthcheck:
-        test: ["CMD-SHELL", "curl -k -f https://localhost:443/pong/health/ || exit 1"]
-        interval: 10s
-        timeout: 5s
-        retries: 5
+      test: [ "CMD-SHELL", "curl -k -f https://localhost:443/pong/health/ || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     depends_on:
       db:
+        condition: service_healthy
+      auth-service:
+        condition: service_healthy
+      chat-service:
         condition: service_healthy
     restart: always
     ports:
@@ -167,12 +193,11 @@ services:
       - "443:443"
     restart: always
 
-
-
-
 networks:
   my_network:
 
+
 volumes:
   db_data:
+  user_data:
   redis_data:
