--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -56,12 +56,13 @@ http {
 
 		# proxy requests to game API
 		location /pong/ {
-			proxy_pass https://host.docker.internal:11443;
+			proxy_pass https://host.docker.internal:11443/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header X-Forwarded-Proto $scheme;
 		}
+
 
 		# disable SSL verification for testing
 		proxy_ssl_verify off;
@@ -74,6 +75,7 @@ http {
 		return 301		https://$host$request_uri;
 	}
 }
+
 
 # http {
 #     include       mime.types;
