--- a/backend/user-service/Dockerfile
+++ b/backend/user-service/Dockerfile
@@ -18,12 +18,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # copy the rest
 COPY . /app/
 
-# generate a self signed SSL certificate
-RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
-	-keyout /app/server.key -out /app/server.crt -subj "/CN=localhost"
-
 # epxose the port
-EXPOSE 443
+EXPOSE 8000
 
 # run dev server
-CMD ["sh", "-c", "python manage.py migrate && python manage.py runserver_plus --cert-file /app/server.crt --key-file /app/server.key 0.0.0.0:443"]
+CMD ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
