--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -29,16 +29,16 @@ http {
 
 		# proxy requests to auth API
 		location /auth/ {
-			proxy_pass https://host.docker.internal:8443/;
+			proxy_pass http://host.docker.internal:8000/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header X-Forwarded-Proto $scheme;
 		}
-		
+
 		# proxy request for register API
 		location /register/ {
-			proxy_pass https://host.docker.internal:9443/;
+			proxy_pass http://host.docker.internal:8001/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
