temporarily disabled to pong-game dependency for nginx container so I could continue

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -216,8 +216,8 @@ services:
         condition: service_healthy
       chat-service:
         condition: service_healthy
-      pong-game:
-        condition: service_healthy
+      # pong-game:
+      #   condition: service_healthy
     networks:
       my_network:
     ports:
