New abiltiy to create a room

--- a/backend/chat-service/Dockerfile
+++ b/backend/chat-service/Dockerfile
@@ -18,13 +18,13 @@ RUN pip install --no-cache-dir -r requirements.txt
 # copy the rest
 COPY . /app/
 
-# generate a self signed SSL certificate
-RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
-	-keyout /app/server.key -out /app/server.crt -subj "/CN=localhost"
+# # generate a self signed SSL certificate
+# RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+# 	-keyout /app/server.key -out /app/server.crt -subj "/CN=localhost"
 
 # expose the port for WebSocket and Django
-EXPOSE 443
+EXPOSE 8000
 
 # cmd to run the Django Channels server (uvicorn)
-CMD ["uvicorn", "config.asgi:application", "--host", "0.0.0.0", "--port", "443", "--ssl-keyfile", "/app/server.key", "--ssl-certfile", "/app/server.crt"]
+CMD ["uvicorn", "config.asgi:application", "--host", "0.0.0.0", "--port", "8000", "--workers", "2"]
 
