--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -64,6 +64,15 @@ http {
 			proxy_set_header X-Method-Allowed "POST, GET, OPTIONS";
 		}
 
+		location /lobby/ {
+			proxy_pass http://host.docker.internal:8003;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+			proxy_set_header X-Method-Allowed "POST, GET, OPTIONS";
+		}
+
 		# disable SSL verification for testing
 		proxy_ssl_verify off;
 	}
