first test created not been tested yet

--- a/backend/chat-service/requirements.txt
+++ b/backend/chat-service/requirements.txt
@@ -1,15 +1,15 @@
-asgiref==3.8.1
 Django==5.1.2
-djangorestframework==3.15.2
+channels==4.0.0
+asgiref==3.8.1
+channels_redis==4.0.0
 psycopg2-binary==2.9.10
 sqlparse==0.5.1
 uvicorn[standard]
-channels
-channels_redis
 django-extensions==3.2.3
 Werkzeug==2.3.7
-pyOpenSSL==23.2.0
 PyJWT==2.8.0
 pytest==7.4.0
 pytest-django==4.5.2
-
+pytest-asyncio==0.21.0
+coverage==7.3.1
+pytest-cov==4.2.0
