--- a/backend/chat-service/Dockerfile
+++ b/backend/chat-service/Dockerfile
@@ -23,9 +23,15 @@ COPY . /app/
 # RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
 # 	-keyout /app/server.key -out /app/server.crt -subj "/CN=localhost"
 
+# add entrypoing and copy script
+COPY entrypoint.sh .
+RUN chmod +x /app/entrypoint.sh
+
 # expose the port for WebSocket and Django
 EXPOSE 8000
 
+# use an entrypoint script
+ENTRYPOINT ["/app/entrypoint.sh"]
+
 # cmd to run the Django Channels server (uvicorn)
 CMD ["uvicorn", "config.asgi:application", "--host", "0.0.0.0", "--port", "8000", "--workers", "2"]
-
