--- a/backend/chat-service/requirements.txt
+++ b/backend/chat-service/requirements.txt
@@ -11,5 +11,9 @@ PyJWT==2.8.0
 pytest==7.4.0
 pytest-django==4.5.2
 pytest-asyncio==0.21.0
-coverage==7.3.1
-pytest-cov==4.2.0
+coverage>=7.5
+pytest-cov==6.0.0
+djangorestframework==3.15.2
+daphne==4.0.0
+djangorestframework-simplejwt==5.2.2
+requests>=2.26.0
