--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -29,7 +29,7 @@ http {
 
 		# proxy requests to auth API
 		location /auth/ {
-			proxy_pass http://host.docker.internal:8000/;
+			proxy_pass http://172.19.0.1:8000/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -38,7 +38,7 @@ http {
 
 		# proxy request for register API
 		location /register/ {
-			proxy_pass http://host.docker.internal:8001/;
+			proxy_pass http://172.19.0.1:8001/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -47,7 +47,7 @@ http {
 
 		# proxy requests to chat API
 		location /chat/ {
-			proxy_pass https://host.docker.internal:10443/;
+			proxy_pass https://172.19.0.1:10443/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -56,7 +56,7 @@ http {
 
 		# proxy requests to game API
 		location /pong/ {
-			proxy_pass http://host.docker.internal:8002;
+			proxy_pass http://172.19.0.1:8002;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -65,7 +65,7 @@ http {
 		}
 
 		location /lobby/ {
-			proxy_pass http://host.docker.internal:8003;
+			proxy_pass http://172.19.0.1:8003;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -106,7 +106,7 @@ http {
 
 #         # Proxy requests to API 1
 #         location /api1/ {
-#             proxy_pass https://host.docker.internal:9443/;  # API 1 (register) running on port 9443
+#             proxy_pass https://172.19.0.1:9443/;  # API 1 (register) running on port 9443
 #             proxy_set_header Host $host;
 #             proxy_set_header X-Real-IP $remote_addr;
 #             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -115,7 +115,7 @@ http {
 
 #         # Proxy requests to API 2
 #         location /api2/ {
-#             proxy_pass https://host.docker.internal:8443/;  # API 2 running on port 8443 (auth)
+#             proxy_pass https://172.19.0.1:8443/;  # API 2 running on port 8443 (auth)
 #             proxy_set_header Host $host;
 #             proxy_set_header X-Real-IP $remote_addr;
 #             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -124,7 +124,7 @@ http {
 
 # 		# Proxy requests to API 2
 #         location /api3/ {
-#             proxy_pass https://host.docker.internal:8000/;  # API 2 running on port 8443 (auth)
+#             proxy_pass https://172.19.0.1:8000/;  # API 2 running on port 8443 (auth)
 #             proxy_set_header Host $host;
 #             proxy_set_header X-Real-IP $remote_addr;
 #             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
