lobby channels added

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -223,6 +223,7 @@ services:
       DJANGO_SUPERUSER_USERNAME: ${DJANGO_SUPERUSER_USERNAME}
       DJANGO_SUPERUSER_EMAIL: ${DJANGO_SUPERUSER_EMAIL}
       DJANGO_SUPERUSER_PASSWORD: ${DJANGO_SUPERUSER_PASSWORD}
+      REDIS_URL: "redis://redis:6379"
     working_dir: /app
     networks:
       my_network:
