--- a/backend/lobby/Dockerfile
+++ b/backend/lobby/Dockerfile
@@ -20,7 +20,12 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the rest of the application code
 COPY . /app/
 
+COPY entrypoint.sh /app/entrypoint.sh
+RUN chmod +x /app/entrypoint.sh
+
 # Expose port
 EXPOSE 8000
+
+ENTRYPOINT [ "/app/entrypoint.sh" ]
 
 CMD ["uvicorn", "config.asgi:application", "--host", "0.0.0.0", "--port", "8000", "--reload"]
