--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -29,7 +29,7 @@ http {
 
 		# proxy requests to auth API
 		location /auth/ {
-			proxy_pass http://172.21.0.1:8000/;
+			proxy_pass http://host.docker.internal:8000/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -38,7 +38,7 @@ http {
 
 		# proxy request for register API
 		location /register/ {
-			proxy_pass http://172.21.0.1:8001/;
+			proxy_pass http://host.docker.internal:8001/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -47,7 +47,7 @@ http {
 
 		# proxy requests to chat API
 		location /chat/ {
-			proxy_pass https://172.21.0.1:10443/;
+			proxy_pass https://host.docker.internal:10443/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -56,7 +56,7 @@ http {
 
 		# proxy requests to game API
 		location /pong/ {
-			proxy_pass http://172.21.0.1:8002;
+			proxy_pass http://host.docker.internal:8002;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -65,7 +65,7 @@ http {
 		}
 
 		location /lobby/ {
-			proxy_pass http://172.21.0.1:8003;
+			proxy_pass http://host.docker.internal:8004;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -73,6 +73,25 @@ http {
 			proxy_set_header X-Method-Allowed "POST, GET, OPTIONS";
 		}
 
+location /ws/chat {
+    proxy_pass http://host.docker.internal:8003; # Your WebSocket server
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+}
+
+location /ws/tournament {
+    proxy_pass http://host.docker.internal:8004; # Your WebSocket server
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+}
 		# disable SSL verification for testing
 		proxy_ssl_verify off;
 	}
@@ -84,54 +103,3 @@ http {
 		return 301		https://$host$request_uri;
 	}
 }
-
-# http {
-#     include       mime.types;
-#     default_type  application/octet-stream;
-
-#     sendfile        on;
-#     keepalive_timeout 65;
-
-# 	ssl_trusted_certificate /etc/ssl/certs/server.crt;  # Path to the self-signed cert
-
-#     server {
-#         listen 80;
-#         server_name localhost;  # Change this to your domain if necessary
-
-#         # Serve Ember app from root
-#         location / {
-#             root /usr/share/nginx/html;  # This should match where your Ember app is built
-#             try_files $uri $uri/ /index.html;  # Fallback to index.html for SPA routing
-#         }
-
-#         # Proxy requests to API 1
-#         location /api1/ {
-#             proxy_pass https://172.21.0.1:9443/;  # API 1 (register) running on port 9443
-#             proxy_set_header Host $host;
-#             proxy_set_header X-Real-IP $remote_addr;
-#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#             proxy_set_header X-Forwarded-Proto $scheme;
-#         }
-
-#         # Proxy requests to API 2
-#         location /api2/ {
-#             proxy_pass https://172.21.0.1:8443/;  # API 2 running on port 8443 (auth)
-#             proxy_set_header Host $host;
-#             proxy_set_header X-Real-IP $remote_addr;
-#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#             proxy_set_header X-Forwarded-Proto $scheme;
-#         }
-
-# 		# Proxy requests to API 2
-#         location /api3/ {
-#             proxy_pass https://172.21.0.1:8000/;  # API 2 running on port 8443 (auth)
-#             proxy_set_header Host $host;
-#             proxy_set_header X-Real-IP $remote_addr;
-#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#             proxy_set_header X-Forwarded-Proto $scheme;
-#         }
-
-#         # Handle SSL verification for upstream requests if needed
-#         proxy_ssl_verify off;  # Not recommended for production; use a valid certificate instead (see line 14)
-#     }
-# }
