--- a/frontend/nginx_dev.conf
+++ b/frontend/nginx_dev.conf
@@ -32,7 +32,7 @@ http {
 
 		# proxy requests to auth API
 		location /auth/ {
-			proxy_pass http://172.21.0.1:8000/;
+			proxy_pass http://172.24.0.1:8000/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -42,7 +42,7 @@ http {
 
 		# proxy request for register API
 		location /register/ {
-			proxy_pass http://172.21.0.1:8001/;
+			proxy_pass http://172.24.0.1:8001/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -50,24 +50,46 @@ http {
 			proxy_set_header X-Method-Allowed "POST, GET, OPTIONS";
 		}
 
-		# proxy requests to chat API
-		location /chat/ {
-			proxy_pass https://172.21.0.1:10443/;
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-			proxy_set_header X-Forwarded-Proto $scheme;
-		}
 
 		# proxy requests to game API
 		location /pong/ {
-			proxy_pass http://172.21.0.1:8002;
+			proxy_pass http://172.24.0.1:8002;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header X-Forwarded-Proto $scheme;
 			proxy_set_header X-Method-Allowed "POST, GET, OPTIONS";
 		}
+
+		location /lobby/ {
+			proxy_pass http://172.24.0.1:8004;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+			proxy_set_header X-Method-Allowed "POST, GET, OPTIONS";
+		}
+
+
+location /ws/chat {
+    proxy_pass http://172.24.0.1:8003; # Your WebSocket server
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+}
+
+location /ws/tournament {
+    proxy_pass http://172.24.0.1:8004; # Your WebSocket server
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+}
 
 		# disable SSL verification for testing
 		proxy_ssl_verify off;
@@ -77,6 +99,7 @@ http {
 	server {
 		listen			80;
 		server_name		localhost;
+		
 		return 301		https://$host$request_uri;
 	}
 }
@@ -102,7 +125,7 @@ http {
 
 #         # Proxy requests to API 1
 #         location /api1/ {
-#             proxy_pass https://172.21.0.1:9443/;  # API 1 (register) running on port 9443
+#             proxy_pass https://172.24.0.1:9443/;  # API 1 (register) running on port 9443
 #             proxy_set_header Host $host;
 #             proxy_set_header X-Real-IP $remote_addr;
 #             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -111,7 +134,7 @@ http {
 
 #         # Proxy requests to API 2
 #         location /api2/ {
-#             proxy_pass https://172.21.0.1:8443/;  # API 2 running on port 8443 (auth)
+#             proxy_pass https://172.24.0.1:8443/;  # API 2 running on port 8443 (auth)
 #             proxy_set_header Host $host;
 #             proxy_set_header X-Real-IP $remote_addr;
 #             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -120,7 +143,7 @@ http {
 
 # 		# Proxy requests to API 2
 #         location /api3/ {
-#             proxy_pass https://172.21.0.1:8000/;  # API 2 running on port 8443 (auth)
+#             proxy_pass https://172.24.0.1:8000/;  # API 2 running on port 8443 (auth)
 #             proxy_set_header Host $host;
 #             proxy_set_header X-Real-IP $remote_addr;
 #             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
